refactor(config): rename artifact name for Swagger configuration